[package]
name = "wa_msg_parser"
version = "0.1.0"
edition = "2024"
description = "a little Library to parse the Whatsapp Message Export txt to a Message Struct"
authors = ["Shadowdara"]
license = "Appache 2.0"
repository = "https://github.com/deinuser/format-whatsapp-export"
readme = "README.md"

[dependencies]
regex = "1.11"
